# document-qa-assistant

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  config.yaml  dev.sh  docker-compose.test.yml  docker-compose.yml  pyproject.toml
docs/design/: README.md  _frame.css  citation.html  empty-state.html  layout.html  pencil-redesign.pen  upload-states.html
docs/screenshots/: README.md
docs/superpowers/plans/: 2026-04-25-doc-qa-implementation.md  2026-04-25-ikb-dark-light-redesign.md  2026-04-26-ingestion-worker-implementation.md
docs/superpowers/specs/: 2026-04-25-doc-qa-design.md  2026-04-25-ikb-dark-light-redesign.md  2026-04-26-ingestion-worker-design.md
frontend/: Dockerfile  package.json  pnpm-lock.yaml  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/components/: chat-pane.tsx  citation-card.tsx  doc-intro.tsx  document-row.tsx  document-sidebar.tsx  document-top-bar.tsx  document-upload-hero.tsx  home.tsx  markdown-chart-impl.tsx  markdown-chart.tsx  message-bubble.tsx  pdf-viewer.tsx  sessions-sidebar.tsx  theme-toggle.tsx
frontend/lib/: api.ts  auth-context.tsx  sse-stream.ts  types.ts  use-chat-stream.ts  use-document-progress.ts  use-documents.ts  use-theme.test.ts  use-theme.ts
frontend/tests/: citation-card.test.tsx  sse-stream.test.ts  theme-toggle.test.tsx
persona/: IDENTITY.md  SOUL.md
scripts/: bootstrap.sh  calibrate_threshold.py  seed_demo_user.py
src/: config.py  main.py
src/api/: auth.py  chat.py  documents.py  reaper.py  sse.py
src/core/: conversation_engine.py  memory_service.py  persona_loader.py  prompt_templates.py  summarizer.py  tool_registry.py
src/db/: session.py
src/db/migrations/: env.py
src/db/migrations/versions/: 0001_init.py  0002_progress_phase.py  0003_hybrid_search_pg_trgm.py  0004_session_documents.py  0005_user_auth.py
src/embedding/: bge_embedder.py  bge_reranker.py
src/ingest/: chunker.py  ingestion.py  pdf_parser.py  zh_normalize.py
src/llm/: gemini_client.py  kimi_client.py
src/models/: __init__.py  schemas.py
src/tools/: search_documents.py
src/worker/: __init__.py  jobs.py  main.py  redis_pool.py
tests/: conftest.py
tests/e2e/: test_doc_qa.py  test_worker_e2e.py
tests/fixtures/: build_sample_pdf.py
tests/unit/: test_api_documents.py  test_bge_embedder.py  test_bge_embedder_async.py  test_chunker.py  test_config.py  test_conversation_engine.py  test_db_smoke.py  test_delete_document.py  test_delete_session.py  test_documents_enqueue.py  test_gemini_client.py  test_gemini_client_stream.py  test_ingestion_failure_cleanup.py  test_ingestion_phases.py  test_ingestion_scanned.py  test_kimi_client.py  test_kimi_client_stream.py  test_memory_service.py  test_models.py  test_no_sync_embedder_in_async_paths.py  test_pdf_parser.py  test_persona_loader.py  test_prompt_templates.py  test_search_documents.py  test_sse.py  test_sse_response_cleanup.py  test_startup_recovery.py  test_worker_jobs.py  test_zh_normalize.py
