[project]
name = "document-qa-assistant"
version = "0.1.0"
description = "Chinese-language PDF document QA assistant"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9", # Alembic uses sync driver
    "alembic>=1.13",
    "pgvector>=0.2.5",
    "torch>=2.0", # explicit so [tool.uv.sources] override applies (CPU wheel)
    "sentence-transformers>=2.6",
    "openai>=1.30", # Moonshot/硅基流动兼容 OpenAI 协议
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "tenacity>=8.2", # 重试
    "pdfplumber>=0.11.0",
    "python-multipart>=0.0.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-env>=1.1",
    "testcontainers[postgres]>=4.0",
    "ruff>=0.3",
    "reportlab>=4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "llm: tests that call real LLM API (costs money, skipped by default)",
]
addopts = "-ra -v --strict-markers -m 'not llm'"  # 默认跳过 llm 标记
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

# torch is resolved from the default index (UV_DEFAULT_INDEX, set by the
# Dockerfile to Tsinghua's PyPI mirror). On Linux this pulls the CUDA-
# bundled wheel (~2GB extra), but the app forces CPU at runtime via
# config.yaml's `embedding.device: cpu`, so this is image-size-only cost.
# The previous CPU-only routing via download.pytorch.org/whl/cpu is
# unreachable from CN networks at usable speeds.

